<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="temperature_unit_metric">Metric</string>
    <string name="temperature_unit_imperial">Imperial</string>

    <!-- Preferences -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string> <!-- 94043 - Mountain View -->

    <string name="pref_temperature_unit_label">Pick Your Units</string>
    <string name="pref_temperature_unit_key" translatable="false">temperature_unit</string>
    <string name="pref_temperature_unit_default">@string/pref_temperature_unit_value_metric</string>
    <string name="pref_temperature_unit_value_metric" translatable="false">metric</string>
    <string name="pref_temperature_unit_value_imperial" translatable="false">imperial</string>
    <string name="action_preferred_location">Preferred Location</string>
    <string name="action_share">Share</string>
    <string name="forecast_separator_string">-</string>
    <string name="forecast_temperature_separator_string">/</string>
    <string-array name="pref_temperature_units_entries">
        <item>@string/temperature_unit_metric</item>
        <item>@string/temperature_unit_imperial</item>
    </string-array>
    <string-array name="pref_temperature_unit_values">
        <item>@string/pref_temperature_unit_value_metric</item>
        <item>@string/pref_temperature_unit_value_imperial</item>
    </string-array>

    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Remember to set the root element of strings.xml to be <resources xmlns:xliff="http://schemas.android.com/apk/res-auto"> so it recognizes the xliff tags -->

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="icon_representing_the_current_state_of_the_weather">Icon representing the current weather.</string>

    <!-- Acessible Wind Direction -->
    <string name="accessible_wind_direction_format">
        The current wind direction is <xliff:g id="direction">$s</xliff:g>
    </string>

    <!-- System Strings -->
    <string name="sync_account_type">sunshine.ecarrara.eng</string>
    <string name="content_authority">eng.ecarrara.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
</resources>
